name:                   OpenGL-GeometryShader4
version:                0.0.0.1
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             None
license:                PublicDomain
homepage:               /dev/null

category:               Graphics
synopsis:               Very rough geometry shader support for OpenGL-2.4.0.1
description:            A very rough implementation of support for geometry
                        shaders for use with OpenGL-2.4.0.1.  It does not
                        integrate very cleanly and is largely coded via cut
                        and paste from the OpenGL package sources, but despite
                        its hackish nature it is good enough for me until
                        support for geometry shaders makes it into the OpenGL
                        package.  In any case it's significantly more
                        convenient than working with OpenGLRaw.

source-repository head
  type: git
  location: git://github.com/mokus0/OpenGL-GeometryShader4.git

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports -fwarn-unused-binds -fwarn-tabs
  exposed-modules:      Graphics.Rendering.OpenGL.GL.Shaders.Geometry
  build-depends:        base >= 4 && <5, 
                        OpenGL==2.6.0.*, 
                        OpenGLRaw==1.3.0.0, 
                        StateVar, 
                        ObjectName
